--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,23 +2,44 @@
     <head>
         <title>Manhunt</title>
         
+        <!-- Stylesheet. -->
+        <link rel="stylesheet" href="/public/style.css">
+        
+        <!-- Dependencies. -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="https://maps.google.com/maps/api/js?key=<%= apiKey %>"></script>
+        <script src="/public/network.js"></script>
+        
         <!-- Load scripts. -->
         <script src="/public/main.js"></script>
         <script src="/public/runner.js"></script>
         <script src="/public/hunter.js"></script>
-
-        <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
+        <script src="/public/game.js"></script>
+        
+        <!-- Load data. -->
+        <script>
+            // Create a network interface.
+            createInterface("<%= address %>");
+        </script>
     </head>
 
     <body>
-        <button onclick="getLocation()">get location</button>
-        
         <!-- This is where UI elements are placed. -->
         <div id="ui">
+            <button onclick="refreshMap();">Refresh Map</button>
+            <button onclick="changeRole(1);">Change to Hunter</button>
+            <button onclick="changeRole(0);">Change to Runner</button>
             
+            <!-- Administrative UI actions. -->
+            <div id="admin" style="display: none">
+                <button onclick="">Start Game</button>
+                <button onclick="">Stop Game</button>
+            </div>
         </div>
+        
+        <br> <!-- Line break between map & UI. -->
         
         <!-- This is where the map is placed. -->
         <div id="map"></div>
-    </body>
+    </body> 
 </html>
