--- a/src/public/style.css
+++ b/src/public/style.css
@@ -15,4 +15,7 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
     overflow-y: auto;
     max-height: 100px;
+
+    display: flex;
+    flex-direction: column-reverse;
 }
